2003-10-31  Jim Meyering  <jim@meyering.net>

	* hash.c: Include "xalloc.h" for use of xalloc_oversized.

	* linebuffer.c: Include <string.h> for declaration of memset.

2003-10-30  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* vasprintf.c: Include <limits.h>, <stdlib.h>.
	(vasprintf): Fail if the resulting length doesn't fit in an 'int'.

2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h (xalloc_oversized): Now a macro, not a function,
	so that it works even if SIZE_MAX < N.  Do not include <stdbool.h>;
	no longer needed.
	* quotearg.c (quotearg_n_options): Use it.
	* group-member.c: Include <stdbool.h>.
	(free_group_info): Arg is now const *; don't free arg.
	(get_group_info): Now returns bool and accepts struct group_info *,
	rather than returning a malloc'ed struct group_info *.
	All uses changed.  Check for overflow in internal size calculation.

	* getusershell.c (readname): Simplify the code by using x2nrealloc
	rather than xmalloc/xrealloc.
	* linebuffer.c (initbuffer, readlinebuffer): Simplify the code by
	using x2realloc rather than xmalloc/xrealloc.  Also, fix a C
	conformance bug: the old code used a pointer after freeing the
	storage that it addressed.
	* hash.c (hash_initialize): Simplify the code by using xalloc_oversized
	rather than doing it by hand.
	* getgroups.c (getgroups): Don't use xrealloc, since we don't need
	the buffer preserved.  Use free and xmalloc instead.
	* quotearg.c (quotearg_n_options): Likewise.
	Use a simpler test for size overflow.  Don't use xalloc_oversized
	because unsigned int might be wider than size_t (!); this suggests
	that we should switch from unsigned int to size_t for slot numbers.

2003-10-27  Bruno Haible  <bruno@clisp.org>

	* stdbool_.h: Better support for BeOS.

2003-10-27  Paul Eggert  <eggert@twinsun.com>

	* exclude.c (new_exclude): Use xzalloc rather than xmalloc
	to allocate the returned structure.  Do not allocate a subarray,
	as x2nrealloc will do that.